@@ -2475,6 +2475,32 @@ build_new_reduction (reduction_info_table_type *reduction_list,
 
   gcc_assert (reduc_stmt);
 
+  if (gimple_code (reduc_stmt) == GIMPLE_PHI)
+    {
+      tree op1 = PHI_ARG_DEF (reduc_stmt, 0);
+      gimple *def1 = SSA_NAME_DEF_STMT (op1);
+      reduction_code = gimple_assign_rhs_code (def1);
+    }
+  else
+    reduction_code = gimple_assign_rhs_code (reduc_stmt);
+  /* Check for OpenMP supported reduction.  */
+  switch (reduction_code)
+    {
+    case PLUS_EXPR:
+    case MULT_EXPR:
+    case MAX_EXPR:
+    case MIN_EXPR:
+    case BIT_IOR_EXPR:
+    case BIT_XOR_EXPR:
+    case BIT_AND_EXPR:
+    case TRUTH_OR_EXPR:
+    case TRUTH_XOR_EXPR:
+    case TRUTH_AND_EXPR:
+      break;
+    default:
+      return;
+    }
+
   if (dump_file && (dump_flags & TDF_DETAILS))
     {
       fprintf (dump_file,
@@ -2482,16 +2508,6 @@ build_new_reduction (reduction_info_table_type *reduction_list,
       print_gimple_stmt (dump_file, reduc_stmt, 0);
       fprintf (dump_file, "\n");
     }
-
-  if (gimple_code (reduc_stmt) == GIMPLE_PHI)
-    {
-      tree op1 = PHI_ARG_DEF (reduc_stmt, 0);
-      gimple *def1 = SSA_NAME_DEF_STMT (op1);
-      reduction_code = gimple_assign_rhs_code (def1);
-    }
-
-  else
-    reduction_code = gimple_assign_rhs_code (reduc_stmt);
 
   new_reduction = XCNEW (struct reduction_info);
 
