@@ -1,3 +1,8 @@
+2017-07-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/81578
+	* gcc.dg/pr81578.c: New test.
+
 2017-07-28  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/81573
