@@ -1,3 +1,10 @@
+2017-07-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/81578
+	* tree-parloops.c (build_new_reduction): Bail out if
+	reduction_code isn't one of the standard OpenMP reductions.
+	Move the details printing after that decision.
+
 2017-07-27  Peter Bergner  <bergner@vnet.ibm.com>
 
 	* config/rs6000/predicates.md (volatile_mem_operand): Remove code
